--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
   </head>
   <body>
     
-    <noscript><div>You need JavaScript to use this.</div></noscript>
+    <p>Strip audio from videos in your browser! No server required!</p>
+    <noscript><p>You need JavaScript to use this.</p></noscript>
     <div><input type="file" id="video-input" hidden></div>
     <p id="loading-message" hidden>ffmpeg-asm is loading. This could take a while. Video will be processed when it loads.</p>
+    <p><a href="https://github.com/alyssais/video-mute">This tool is on GitHub.</a></p>
 
     <script src="videoconverter.js/build/ffmpeg.js" id="ffmpeg-script" defer async></script>
     <script src="main.js"></script>
