Better downloading, no prompting

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <noscript><p>You need JavaScript to use this.</p></noscript>
     <div><input type="file" id="video-input" hidden></div>
     <p id="loading-message" hidden>ffmpeg-asm is loading. This could take a while. Video will be processed when it loads.</p>
+    <div><a href="" id="download-link" hidden>Download</a></div>
     <p><a href="https://github.com/alyssais/video-mute">This tool is on GitHub.</a></p>
 
     <script src="videoconverter.js/build/ffmpeg.js" id="ffmpeg-script" defer async></script>
